style(revisions): prevent revision list from overflowing

--- a/apps/client/src/widgets/dialogs/revisions.css
+++ b/apps/client/src/widgets/dialogs/revisions.css
@@ -67,6 +67,10 @@ body.mobile .revisions-dialog {
         flex-shrink: 0;
     }
 
+    .revision-list {
+        flex-shrink: 0;
+    }
+
     .revision-content.type-file {
         display: flex;
         min-width: 0;
